feat: 중복되는 이름 찾기 기능 구현